crates/formatter/tests/snapshots/snapshots__migrations__000165_prevent_autostart_days.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view template_with_users;

alter table templates
	add column autostart_block_days_of_week smallint not null default 0;

comment on column templates.autostart_block_days_of_week is 'A bitmap of days of week that autostart of a workspace is not allowed. Default allows all days. This is intended as a cost savings measure to prevent auto start on weekends (for example).';

-- Recreate view
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from
	templates left join visible_users on templates.created_by = visible_users.id;

comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
