crates/formatter/tests/snapshots/snapshots__migrations__000168_pg_coord_tailnet_v2_api.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type tailnet_status as enum (
	'ok',
	'lost'
);

create table tailnet_peers (
	id uuid not null,
	coordinator_id uuid not null,
	updated_at timestamp with time zone not null,
	node bytea not null,
	status tailnet_status not null default 'ok'::tailnet_status,
	primary key (id, coordinator_id),
	foreign key (coordinator_id) references tailnet_coordinators (id)
		on delete cascade
);

-- For shutting down / GC a coordinator
create index idx_tailnet_peers_coordinator on tailnet_peers (coordinator_id);

-- Any time tailnet_peers table changes, send an update with the affected peer ID.
create function tailnet_notify_peer_change()
returns trigger
language plpgsql
as $$
begin
	if (OLD is not null) then
		perform pg_notify('tailnet_peer_update', OLD.id::text);
		return null;
	end if;
	if (NEW is not null) then
		perform pg_notify('tailnet_peer_update', NEW.id::text);
		return null;
	end if;
end;
$$;

create trigger tailnet_notify_peer_change
	after insert or update or delete on tailnet_peers
	for each row
	execute procedure tailnet_notify_peer_change();

create table tailnet_tunnels (
	coordinator_id uuid not null,
	-- we don't keep foreign keys for src_id and dst_id because the coordinator doesn't
	-- strictly order creating the peers and creating the tunnels
	src_id uuid not null,
	dst_id uuid not null,
	updated_at timestamp with time zone not null,
	primary key (coordinator_id, src_id, dst_id),
	foreign key (coordinator_id) references tailnet_coordinators (id)
		on delete cascade
);

create function tailnet_notify_tunnel_change()
returns trigger
language plpgsql
as $$
begin
	if (NEW is not null) then
		perform pg_notify('tailnet_tunnel_update', NEW.src_id || ',' || NEW.dst_id);
		return null;
	elsif (OLD is not null) then
		perform pg_notify('tailnet_tunnel_update', OLD.src_id || ',' || OLD.dst_id);
		return null;
	end if;
end;
$$;

create trigger tailnet_notify_tunnel_change
	after insert or update or delete on tailnet_tunnels
	for each row
	execute procedure tailnet_notify_tunnel_change();
