crates/formatter/tests/snapshots/snapshots__migrations__000169_deprecate_template.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- The view will be rebuilt with the new column
drop view template_with_users;

alter table templates add column deprecated text not null default '';

comment on column templates.deprecated is 'If set to a non empty string, the template will no longer be able to be used. The message will be displayed to the user.';

-- Restore the old version of the template_with_users view.
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from
	templates left join visible_users on templates.created_by = visible_users.id;

comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
