crates/formatter/tests/snapshots/snapshots__migrations__000170_workspaceproxy_version.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_proxies drop column version;
