crates/formatter/tests/snapshots/snapshots__migrations__000171_oidc_debug_claims.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table user_links drop column debug_context;
