crates/formatter/tests/snapshots/snapshots__migrations__000171_oidc_debug_claims.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table user_links add column debug_context jsonb default '{}' not null;
comment on column user_links.debug_context is 'Debug information includes information like id_token and userinfo claims.';
