crates/formatter/tests/snapshots/snapshots__migrations__000172_health_settings_audit.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- This has to be outside a transaction
alter type resource_type add value if not exists 'health_settings';
