crates/formatter/tests/snapshots/snapshots__migrations__000173_provisioner_last_seen_at.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_daemons drop column last_seen_at, drop column version;
